# python_sri

./: README.md  SECURITY.md  pylintrc  pyproject.toml  tox.ini
.github/workflows/: type_check_and_lint_and_test.yml
py_sri/: __init__.py  parser.py  sri.py
python_sri/: .sri.py.swp  __init__.py  django_sri.py  fastapi_sri.py  flask_sri.py  generic_sri.py  headers.py  parser.py  sri.py
tests/: .test_sri.py.swp  test_css_sri.py  test_django.py  test_fastapi.py  test_flask.py  test_generic.py  test_headers.py  test_import.py  test_js_sri.py  test_parser.py  test_sri.py
tests/html/input/: mdn_charref.html  mdn_sri.html
tests/html/output/: mdn_charref.html  mdn_sri.html
tests/output/: http.html  index.html  parser.html
tests/sri_output/: http.html  index.html
tests/static/: index.html
